<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bepensa</string>
    <string name="drawer_opened" translatable="false">Opened</string>
    <string name="drawer_closed" translatable="false">Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="base_url" translatable="false">https://bepensa.api.dacodes.mx/</string>-->

    <string name="base_url" translatable="false">https://bepensa.api.dacodes.mx/</string>
    <string name="socket_url" translatable="false">bepensa.api.dacodes.mx/</string>
    <!--Errores-->
    <string name="conexion_interrumpida">La conexión fue interrumpida, intentelo nuevamente</string>
    <string name="error_conexion">No pudimos establecer la conexión. Revise su conexión a internet.</string>
    <string name="error_conexion_1">No pudimos establecer la conexión.</string>

    <string name="error_no_location_title">Tu ubicación no está disponible</string>
    <string name="error_no_location_body">No fue posible obtener tu ubicación por el momento. Inténtalo de nuevo más tarde.</string>

    <string name="order_ok">OK</string>
    <string name="order_cancel">Cancelar</string>

    <string name="set_address_hint">¿Cuál es tu ubicación?</string>

    <string name="canjea_premio">Canjea tu premio y continúa\ndesbloqueando muchos más</string>
    <string name="inicia_sesion_premios">Inicia sesión para poder ver los premios que tenemos para ti.</string>

    <string name="login_string">Utiliza en tu contraseña tu fecha de nacimiento "DDMMAA" si es la primera vez que utilizas la aplicación</string>
    <string name="password_detail_string">La contraseña debe de ser de al menos 6 dígitos, alfanumérica y sin caracteres especiales</string>

    <string name="channel_one_body" translatable="false">channeltest</string>
    <string name="facebook_app_id">400780677172832</string>
    <string name="fb_login_protocol_scheme">fb+app_id</string>
    <string name="register_sms_string">Introduce el código de verificación de cuatro dígitos que recibiste por via SMS</string>
    <string name="no_sms_string">No he recibido ningún código</string>

    <string name="worker_identification">IDENTIFICACIÓN DE COLABORADOR</string>
    <string name="verification_code">CÓDIGO DE VERIFICACIÓN</string>

    <string name="api_get_events" translatable="false">v1/collaborators/events</string>
    <string name="api_get_promotions" translatable="false">v1/collaborators/promotions</string>
    <string name="api_get_awards_redeem" translatable="false">v1/awards/redeem</string>
    <string name="api_get_notificaciones" translatable="false">v1/notifications</string>
    <string name="api_get_comunicados" translatable="false">v1/collaborators/releases</string>
    <string name="api_get_chat" translatable="false">v1/opportunities/conversations/</string>
    <string name="api_get_survey" translatable="false">v1/collaborators/surveys</string>
    <string name="api_get_ranking" translatable="false">v1/collaborators/ranking</string>
    <string name="api_get_feed" translatable="false">v1/collaborators/feed</string>

    <string name="text_settings_notification">Desactivar notificaciones</string>
    <string name="format_date">"yyyy-MM-dd'T'HH:mm:ss.SSSSSS-SS:SS" </string>
    <string name="format_date_events">"yyyy-MM-dd'T'HH:mm:ss-SS:SS" </string>

    <!--  Configuraciones -->

    <string name="settings_terms_conditions">Términos y condiciones</string>
    <string name="settings_notification">Notificaciones</string>
    <string name="settings_mode">Modo Visible</string>
    <string name="settings_contact">Contacto</string>
    <string name="settings_sesion">Cerrar sesión</string>
    <string name="settings_text_ranking">Ranking \nPuedes mostrar tus resultados u ocultarlos y tener el control de la visualizacion de ellos.</string>

    <!-- Eventos -->

    <string name="events_search">Buscar</string>

    <!-- Contacto -->

    <string name="contact_name">Contacto</string>
    <string name="contact_phone">(999)3519327</string>
    <string name="contact_email">bepensa@correo.com.mx</string>

    <string name="title_activity_principal_test">PrincipalTest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Encuesta-->
    <string name="test_title">Titulo de la encuesta</string>
    <string name="test_option">Opcion multiple</string>
    <string name="test_page">1/3</string>
    <string name="test_text">Elige acontinuacion la respuesta que consideres mas adecuada para esta pregunta de ejemplo de encuesta.</string>

    <!-- Ubicacion-->
    <string name="title_activity_maps">Map</string>

    <string name="permission_refused">Permission was not granted</string>
    <string name="permission_request_title">Special Permission Request</string>
    <string name="app_permission_notice">This permission request is very important to your app functionality. If it is not granted your app might not work the way it is intended</string>
    <string name="failed_draw">Empty line path return</string>
    <string name="server_error">Server error. Something when wrong with the server</string>
    <string name="contact_bepensa">contacto@bepensa.com</string>
    <string name="bepensa_phone">Telefono:(999) 942 84 44</string>
    <string name="bepensa_street">Calle 60 diagonal #493 \n Fracc. Parque Industrial Yucatán C.P 93300</string>
    <string name="bepensa_lada">Lada sin costo al: 01 800 712 05 00</string>
    <string-array name="name_location">
        <item>Aguascalientes</item>//1
        <item>Baja California</item>//2
        <item>Baja California Sur</item>//3
        <item>Campeche</item>//4
        <item>Coahuila de Zaragoza</item>//5
        <item>Colima</item>//6
        <item>Chiapas</item>//7
        <item>Chihuahua</item>//8
        <item>Ciudad de México</item>//9
        <item>Durango</item>//10
        <item>Guanajuato</item>//11
        <item>Guerrero</item>//12
        <item>Hidalgo</item>//13
        <item>Jalisco</item>//14
        <item>Estado de México</item>//15
        <item>Michoacán</item>//16
        <item>Morelos</item>//17
        <item>Nayarit</item>//18
        <item>Nuevo León</item>//19
        <item>Oaxaca</item>//20
        <item>Puebla</item>//21
        <item>Querétaro</item>//22
        <item>Quintana Roo</item>//23
        <item>San Luis Potosí</item>//24
        <item>Sinaloa</item>//25
        <item>Sonora</item>//26
        <item>Tabasco</item>//27
        <item>Tamaulipas</item>//28
        <item>Tlaxcala</item>//29
        <item>Veracruz</item>//30
        <item>Yucatán</item>//31
        <item>Zacatecas</item>//32
    </string-array>

    <string name="notification_message">%1$s &lt;a href="%2$s">%3$s&lt;/a></string>
    <string name="notification_message_url">&lt;a href="%1$s">%2$s&lt;/a></string>
    <string name="google_form">¿Tienes algún problema ? <br/>Ingresa &lt;a href="%1$s"> aquí&lt;/a> para reportarlo.</string>
    <string name="google_form_2">¿Tienes algún problema ?\nIngresa aquí para reportarlo.</string>
    <string name="aliados_bepensa">Hola %1$s, tienes mensajes sin leer.</string>
    <string name="google_form_3">&amp;entry.390780096=Android&amp;entry.1365363755=%1$s&amp;entry.2047119391=%2$s</string>
    <string name="google_form_4">&amp;entry.390780096=Android</string>
</resources>
