<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/card_round_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/test_title" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_title"
        android:textColor="@color/colorGrayText"
        android:layout_alignParentRight="true"
        android:id="@+id/tv_opcion"
        android:layout_width="wrap_content"
        android:textSize="@dimen/textSizeFantasy"
        android:layout_height="wrap_content"
        android:text="@string/test_option" />

    <TextView
        android:id="@+id/tv_page"
        android:textSize="@dimen/textSizeFantasy"
        android:textColor="@color/colorGrayText"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_title"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_page" />

</RelativeLayout>